--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 <table>
     <tr>
         <th><a href="https://www.instagram.com/lohdtord" target="_blank"><img class="gambar"src="img/ig.png"></a></th>
-        <th><a href="https://api.whatsapp.com/send?phone=6287737747077text=Hello,%2C%0A%0AI%20want%20to%20make%20a%20website%20today.%20%0A[Order Detail]%20%0AIn%20any%20case%2C%20I%20will%20try%20ringing%20you%20at%20a%20later%20time.%0A%0A%0AWarm%20Regards,%20%0A[Name]%2C%0A" target="_blank"><img class="gambar"src="img/wa.png"></a></th>
+        <th><a href="https://api.whatsapp.com/send?phone=6287737747077&text=Hello,%2C%0A%0AI%20want%20to%20make%20a%20website%20today.%20%0A[Order Detail]%20%0AIn%20any%20case%2C%20I%20will%20try%20ringing%20you%20at%20a%20later%20time.%0A%0A%0AWarm%20Regards,%20%0A[Name]%2C%0A" target="_blank"><img class="gambar"src="img/wa.png"></a></th>
         <th><a href="https://orpheust.github.io" target="_blank"><img class="gambar"src="img/web.png"></a></th>
         <th><a href="https://mail.google.com/mail/u/0/?view=cm&fs=1&tf=1&to=orpheust.business@email.com&subject=[Reason]&body=Hello,%2C%0A%0AI%20want%20to%20make%20a%20website%20today.%20%0A[Order Detail]%20%0AIn%20any%20case%2C%20I%20will%20try%20ringing%20you%20at%20a%20later%20time.%0A%0A%0AWarm%20Regards,%20%0A[Name]%2C%0A%0A%0A%0A" target="_blank"><img class="gambar"src="img/mail.png"></a></th>
     </tr>
